messaging: conversation page

--- a/templates/includes/navbar_messages.html
+++ b/templates/includes/navbar_messages.html
@@ -9,7 +9,7 @@
         {{ unread_messages_count }}
       </span>
     {% endif %}
-    <span class="d-none d-sm-inline ms-1">Messages</span>
+    <span class="d-none d-sm-inline ms-1"></span>
   </a>
 
   <ul class="dropdown-menu dropdown-menu-end py-2 shadow" aria-labelledby="navMessages" style="min-width: 320px;">
