notifications: notif for messages, likes, follow, post comments added

--- a/templates/base.html
+++ b/templates/base.html
@@ -135,6 +135,8 @@ main.container {
   <script src="{% static 'js/comments.js' %}" defer></script>
   <script src="{% static 'js/subscriptions.js' %}" defer></script>
   <script src="{% static 'js/messaging.js' %}" defer></script>
+  <script src="{% static 'js/notifications.js' %}" defer></script>
+
   {% endblock %}
 
 </body>
