--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -53,7 +53,7 @@
     </button>
   </form>
 
-
+{% include "includes/notifications_dropdown.html" %}
 {% include "includes/navbar_messages.html" %}
 
 
