templates: navmenu overlay fixed

--- a/templates/apps/users/profile.html
+++ b/templates/apps/users/profile.html
@@ -9,7 +9,7 @@
   <div class="alert alert-danger">{{ form.errors }}</div>
 {% endif %}
 
-<div class="container">
+<div class="container profile-page">
   <div class="row g-4">
     <div class="col-12 col-lg-4">
       <div class="card shadow-sm">
