--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
         rel="stylesheet">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.4/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/theme.css' %}">
 
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
 </head>
 <body>
@@ -46,6 +47,7 @@
   <script src="{% static 'js/subscriptions.js' %}" defer></script>
   <script src="{% static 'js/messaging.js' %}" defer></script>
   <script src="{% static 'js/notifications.js' %}" defer></script>
+  <script src="{% static 'js/theme-toggle.js' %}" defer></script>
   {% endblock %}
 
 </body>
